welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:1: error: Missing closing brace `}' assumed here
var nbBiscuit:Int = 0;
^RunFour:7: error: ';' expected but 'else' found.
  else if
  ^